--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
     // 🔹 ВСТАВЬ СВОЙ КОД КОНФИГА СЮДА
     const firebaseConfig = {
-        apiKey: "AIzaSyC9t0FlfMbGZHcVfQ0_ySCOCAwpKlF8Tao",
-        authDomain: "infosec-qr-show.firebaseapp.com",
-        databaseURL: "https://infosec-qr-show-default-rtdb.europe-west1.firebasedatabase.app",
-        projectId: "infosec-qr-show",
-        storageBucket: "infosec-qr-show.firebasestorage.app",
-        messagingSenderId: "59751978125",
-        appId: "1:59751978125:web:47918b43d8ceacbf57bec4",
-        measurementId: "G-N8QT2RJTVZ"
+      apiKey: "AIzaSyBDzmZgzjx3zcLm-bi38iQtNkqDfrqTII8",
+      authDomain: "infosec-qr-show-cebb5.firebaseapp.com",
+      databaseURL: "https://infosec-qr-show-cebb5-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "infosec-qr-show-cebb5",
+      storageBucket: "infosec-qr-show-cebb5.firebasestorage.app",
+      messagingSenderId: "818912167917",
+      appId: "1:818912167917:web:dcca7a8240e0cc03a3c9e4",
+      measurementId: "G-LVMZJPB7JG"
     };
 
     const app = initializeApp(firebaseConfig);
