--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-  <meta charset="utf-8">
-  <title>System Loading...</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Инфобез QR</title>
   <style>
     body {
+      font-family: Arial, sans-serif;
       background: black;
-      color: #00ff9f;
-      font-family: "Courier New", monospace;
-      text-align: center;
-      margin-top: 15%;
+      color: lime;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
-    h1 { font-size: 2.5em; }
-    h2 { font-size: 1.5em; }
-    .active { color: #00ff9f; animation: blink 1s infinite alternate; }
-    @keyframes blink { from { opacity: 1; } to { opacity: 0.3; } }
+    #count {
+      font-size: 5em;
+    }
   </style>
-  <!-- Подключаем Firebase -->
-  <script type="module">
-    // Импорт SDK из CDN
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getDatabase, ref, onValue, runTransaction } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+</head>
+<body>
+  <h1>Подключений:</h1>
+  <div id="count">0</div>
 
-    // 🔹 ВСТАВЬ СВОЙ КОД КОНФИГА СЮДА
+  <!-- Firebase SDK -->
+  <script type="module">
+    // Импорт нужных SDK
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
+    import { getDatabase, ref, get, set, onValue } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+
+    // Твой Firebase config (замени на свой из консоли)
     const firebaseConfig = {
       apiKey: "AIzaSyBDzmZgzjx3zcLm-bi38iQtNkqDfrqTII8",
       authDomain: "infosec-qr-show-cebb5.firebaseapp.com",
@@ -34,31 +42,27 @@
       measurementId: "G-LVMZJPB7JG"
     };
 
+    // Инициализация
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
-    const countRef = ref(db, 'connections');
+    const countRef = ref(db, 'connections/count');
 
-    // При загрузке страницы добавляем +1
-    runTransaction(countRef, (current) => {
-      return (current || 0) + 1;
-    });
-
-    // Отслеживаем обновления в реальном времени
+    // Отображаем текущее значение
     onValue(countRef, (snapshot) => {
-      const count = snapshot.val() || 0;
-      const display = document.getElementById("count");
-      display.textContent = `🔹 Подключено устройств: ${count}`;
-      
-      if (count >= 10) {
-        document.getElementById("status").innerHTML = "✅ Система активирована!<br>Спасибо за подключение.";
-        document.body.style.background = "#001100";
-      }
+      document.getElementById('count').textContent = snapshot.val() || 0;
     });
+
+    // Проверяем, заходил ли пользователь ранее
+    const visited = localStorage.getItem('visited');
+    if (!visited) {
+      // Если первый раз — увеличиваем счётчик
+      get(countRef).then(snapshot => {
+        const currentCount = snapshot.exists() ? snapshot.val() : 0;
+        set(countRef, currentCount + 1);
+      });
+      // Ставим метку
+      localStorage.setItem('visited', 'true');
+    }
   </script>
-</head>
-<body>
-  <h1 class="active">Загрузка системы...</h1>
-  <h2 id="count">Подключено устройств: —</h2>
-  <h2 id="status">Ожидание подключений...</h2>
 </body>
 </html>
