Update5 index.html

--- a/index.html
+++ b/index.html
@@ -115,13 +115,14 @@
     import { getDatabase, ref, get, set, onValue } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
   
     const firebaseConfig = {
-      apiKey: "ТВОЙ_API_KEY",
-      authDomain: "infosec-qr-show.firebaseapp.com",
-      databaseURL: "https://infosec-qr-show-default-rtdb.europe-west1.firebasedatabase.app",
-      projectId: "infosec-qr-show",
-      storageBucket: "infosec-qr-show.appspot.com",
-      messagingSenderId: "XXX",
-      appId: "XXX"
+      apiKey: "AIzaSyBDzmZgzjx3zcLm-bi38iQtNkqDfrqTII8",
+      authDomain: "infosec-qr-show-cebb5.firebaseapp.com",
+      databaseURL: "https://infosec-qr-show-cebb5-default-rtdb.europe-west1.firebasedatabase.app",
+      projectId: "infosec-qr-show-cebb5",
+      storageBucket: "infosec-qr-show-cebb5.firebasestorage.app",
+      messagingSenderId: "818912167917",
+      appId: "1:818912167917:web:dcca7a8240e0cc03a3c9e4",
+      measurementId: "G-LVMZJPB7JG"
     };
   
     const app = initializeApp(firebaseConfig);
