--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>INFSEC COUNTER</title>
+  <title>INFSEC LAUNCH SYSTEM</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 
@@ -11,7 +11,7 @@
       padding: 0;
       width: 100%;
       height: 100%;
-      background: radial-gradient(circle at center, #020202 0%, #000 100%);
+      background: #000;
       color: #00ffcc;
       font-family: 'Share Tech Mono', monospace;
       overflow: hidden;
@@ -19,101 +19,86 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      position: relative;
     }
 
-    .bg {
-      position: absolute;
-      width: 200%;
-      height: 200%;
-      background: repeating-linear-gradient(
-        90deg,
-        rgba(0,255,200,0.05) 0px,
-        rgba(0,255,200,0.05) 1px,
-        transparent 1px,
-        transparent 40px
-      ),
-      repeating-linear-gradient(
-        0deg,
-        rgba(0,255,200,0.05) 0px,
-        rgba(0,255,200,0.05) 1px,
-        transparent 1px,
-        transparent 40px
-      );
-      animation: drift 30s linear infinite;
-      z-index: 0;
-    }
-
-    @keyframes drift {
-      from { transform: translate(0, 0); }
-      to { transform: translate(-200px, -200px); }
-    }
-
-    /* === ЭФФЕКТ ЭКРАНА === */
-    .scan {
+    /* ====== Фоновые цифры ====== */
+    .matrix {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: repeating-linear-gradient(
-        rgba(0,255,0,0.05) 0px,
-        rgba(0,255,0,0.05) 2px,
-        transparent 2px,
-        transparent 4px
-      );
-      animation: scan 3s linear infinite;
-      z-index: 1;
-    }
-
-    @keyframes scan {
-      0% { background-position: 0 0; }
-      100% { background-position: 0 100%; }
-    }
-
-    .glitch {
-      position: relative;
-      font-size: 160px;
-      color: #00ffcc;
-      text-shadow: 0 0 15px #00ffcc, 0 0 40px #00ffcc;
-      z-index: 2;
-      animation: flicker 3s infinite;
-    }
-
-    .glitch::before, .glitch::after {
-      content: attr(data-text);
-      position: absolute;
-      left: 0;
-      right: 0;
       overflow: hidden;
+      background: radial-gradient(circle at center, #020202 0%, #000 100%);
+      z-index: 0;
     }
 
-    .glitch::before {
+    canvas {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      opacity: 0.25;
+    }
+
+    /* ====== Окно-интерфейс ====== */
+    .terminal {
+      width: 85%;
+      max-width: 1200px;
+      height: 80%;
+      background: rgba(0, 30, 30, 0.3);
+      border: 1px solid #00ffaa;
+      box-shadow: 0 0 30px #00ffaa inset, 0 0 50px #00ffaa44;
+      border-radius: 15px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 2;
+      position: relative;
+      backdrop-filter: blur(2px);
+    }
+
+    .header {
+      position: absolute;
+      top: 10px;
+      left: 20px;
+      font-size: 20px;
+      color: #00ffaa;
+      text-shadow: 0 0 10px #00ffaa;
+      letter-spacing: 2px;
+    }
+
+    /* ====== Главные надписи ====== */
+    .title {
+      font-size: 70px;
       color: #ff0044;
-      clip-path: inset(0 0 60% 0);
-      animation: glitch-top 2s infinite linear alternate-reverse;
+      text-shadow: 0 0 15px #ff0044, 0 0 50px #ff0044;
+      animation: pulseTitle 2s infinite alternate;
+      letter-spacing: 3px;
+      z-index: 3;
     }
 
-    .glitch::after {
-      color: #00ffff;
-      clip-path: inset(40% 0 0 0);
-      animation: glitch-bottom 2.5s infinite linear alternate-reverse;
+    @keyframes pulseTitle {
+      from { transform: scale(1); opacity: 1; }
+      to { transform: scale(1.05); opacity: 0.85; }
     }
 
-    @keyframes glitch-top {
-      0% { transform: translate(0,0); }
-      20% { transform: translate(-5px,-2px); }
-      40% { transform: translate(5px,2px); }
-      60% { transform: translate(-3px,3px); }
-      100% { transform: translate(0,0); }
+    .subtitle {
+      font-size: 26px;
+      color: #00ffaa;
+      margin-bottom: 10px;
+      text-shadow: 0 0 8px #00ffaa;
     }
 
-    @keyframes glitch-bottom {
-      0% { transform: translate(0,0); }
-      20% { transform: translate(3px,3px); }
-      40% { transform: translate(-4px,1px); }
-      60% { transform: translate(2px,-3px); }
-      100% { transform: translate(0,0); }
+    /* ====== Счётчик ====== */
+    .counter {
+      font-size: 150px;
+      color: #00ffcc;
+      text-shadow: 0 0 20px #00ffcc, 0 0 80px #00ffcc;
+      animation: flicker 3s infinite;
     }
 
     @keyframes flicker {
@@ -121,58 +106,69 @@
       20%, 24%, 55% { opacity: 0.5; }
     }
 
-
-    .subtitle {
-      font-size: 28px;
-      color: #00ffaa;
-      letter-spacing: 2px;
-      text-shadow: 0 0 10px #00ffaa;
-      margin-bottom: 20px;
-      z-index: 2;
+    /* ====== Таймер ====== */
+    #timer {
+      font-size: 90px;
+      color: #ff0044;
+      text-shadow: 0 0 30px #ff0044, 0 0 80px #ff0044;
+      margin-top: 30px;
+      display: none;
+      z-index: 4;
+      animation: flicker 1.5s infinite;
     }
 
-
-    .footer {
-      position: absolute;
-      bottom: 60px;
-      text-align: center;
-      font-size: 70px;
-      color: #ff0044;
-      text-shadow: 0 0 20px #ff0044, 0 0 60px #ff0044;
-      animation: pulse 2s infinite alternate;
-      z-index: 2;
+    /* ====== Хак начался ====== */
+    #hack-start {
+      font-size: 120px;
+      color: #ff0000;
+      text-shadow: 0 0 25px #ff0000, 0 0 60px #ff0000;
+      display: none;
+      z-index: 6;
+      animation: pulse 1.2s infinite alternate;
     }
 
     @keyframes pulse {
       from { transform: scale(1); opacity: 1; }
-      to { transform: scale(1.05); opacity: 0.8; }
+      to { transform: scale(1.08); opacity: 0.8; }
     }
 
-    /* === ДОП ЭФФЕКТ: РАНДОМНЫЙ ШУМ === */
-    .noise {
+    /* ====== Подпись ====== */
+    .footer {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url('https://media.giphy.com/media/oEI9uBYSzLpBK/giphy.gif');
-      opacity: 0.05;
+      top: 30px;
+      right: 50px;
+      font-size: 70px;
+      font-weight: bold;
+      color: #00ff99;
+      text-shadow: 0 0 20px #00ff99, 0 0 60px #00ff99;
+      animation: glitchText 2s infinite alternate;
       z-index: 3;
-      pointer-events: none;
-      mix-blend-mode: lighten;
     }
 
+    @keyframes glitchText {
+      0% { transform: translate(0); }
+      25% { transform: translate(1px, -2px); }
+      50% { transform: translate(-2px, 1px); }
+      75% { transform: translate(2px, 1px); }
+      100% { transform: translate(0); }
+    }
   </style>
 </head>
 <body>
-  <div class="bg"></div>
-  <div class="scan"></div>
-  <div class="noise"></div>
-
-  <div class="subtitle">Количество подключенных устройств</div>
-  <div class="glitch" id="counter" data-text="0">0</div>
+  <div class="matrix">
+    <canvas id="matrixCanvas"></canvas>
+  </div>
 
   <div class="footer">КНИТУ ИХТИ 151-24</div>
+
+  <div class="terminal">
+    <div class="header">INFSEC CONTROL PANEL // ACCESS GRANTED</div>
+    <div class="subtitle">Количество подключенных устройств:</div>
+    <div class="counter" id="counter">0</div>
+    <div id="timer"></div>
+    <div id="hack-start">ХАК НАЧАЛСЯ</div>
+    <div class="title">INFSEC LAUNCH SEQUENCE</div>
+  </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
@@ -193,20 +189,74 @@
     const db = getDatabase(app);
     const counterRef = ref(db, "connections");
     const counterEl = document.getElementById("counter");
+    const timerEl = document.getElementById("timer");
+    const hackEl = document.getElementById("hack-start");
 
- 
+    let countdownStarted = false;
+
     onValue(counterRef, (snapshot) => {
       const val = snapshot.val() || 0;
       counterEl.textContent = val;
-      counterEl.setAttribute('data-text', val);
-    });
 
+      if (val >= 10 && !countdownStarted) {
+        countdownStarted = true;
+        startCountdown(10);
+      }
+    });
 
     get(counterRef).then(snapshot => {
       const current = snapshot.val() || 0;
       set(counterRef, current + 1);
     });
+
+    function startCountdown(seconds) {
+      timerEl.style.display = "block";
+      let remaining = seconds;
+
+      const tick = setInterval(() => {
+        timerEl.textContent = remaining;
+        remaining--;
+
+        if (remaining < 0) {
+          clearInterval(tick);
+          timerEl.style.display = "none";
+          hackEl.style.display = "block";
+        }
+      }, 1000);
+    }
+
+    // === Матрица на фоне ===
+    const canvas = document.getElementById("matrixCanvas");
+    const ctx = canvas.getContext("2d");
+
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+
+    const letters = "01АВГДЕЖЗИЛПРОТШХЦЮ";
+    const fontSize = 16;
+    const columns = canvas.width / fontSize;
+    const drops = Array(Math.floor(columns)).fill(1);
+
+    function draw() {
+      ctx.fillStyle = "rgba(0, 0, 0, 0.1)";
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
+      ctx.fillStyle = "#00ff99";
+      ctx.font = fontSize + "px monospace";
+
+      for (let i = 0; i < drops.length; i++) {
+        const text = letters.charAt(Math.floor(Math.random() * letters.length));
+        ctx.fillText(text, i * fontSize, drops[i] * fontSize);
+
+        if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
+          drops[i] = 0;
+        }
+        drops[i]++;
+      }
+    }
+
+    setInterval(draw, 35);
   </script>
 </body>
 </html>
+
 
